# poker

./: .gitignore  ABSTRACTION_EXPERIMENTS.md  ABSTRACTION_HASH.md  ACTION_ABSTRACTION_FIX_SUMMARY.md  ADAPTIVE_EPSILON_GUIDE.md  ADAPTIVE_EPSILON_IMPLEMENTATION_SUMMARY.md  AIVAT_IMPLEMENTATION_SUMMARY.md  APPLE_SILICON_OCR_OPTIMIZATION.md  ASSETS.md  AUTOMATIC_CHUNK_RESTART.md  AUTO_PLAY_BEFORE_AFTER.md  AUTO_PLAY_IMPLEMENTATION_GUIDE.md  BACKMAPPING_IMPLEMENTATION_SUMMARY.md  BLUEPRINT_TIME_BUDGET.md  BOARD_COLOR_PREFILTER_SUMMARY.md  BOARD_DETECTION_IMPLEMENTATION_SUMMARY.md  BOARD_REGIONS_GUIDE.md  BUTTON_DETECTION_SUMMARY.md  BUTTON_INFERENCE_SUMMARY.md  BUTTON_VISUAL_DETECTION.md  CALIBRATION_GUIDE.md  CARD_RECOGNITION_FIX_SUMMARY.md  CARD_VISION_VERIFICATION_REPORT.md  CFV_NET_CLI_USAGE.md  CFV_NET_README.md  CHAT_OCR_FOCUS_MODE.md  CHAT_OCR_IMPLEMENTATION_SUMMARY.md  CHAT_OCR_INTEGRATION_SUMMARY.md  CHAT_OCR_QUICKREF.md  CHAT_PARSING_GUIDE.md  CHECKPOINTING.md  CHECKPOINT_FORMAT.md  CHECKPOINT_RESUME_FIX_SUMMARY.md  CHUNKED_TRAINING.md  CHUNKED_TRAINING_SUMMARY.md  COMPACT_STORAGE.md  CORRECTION_VISION_PREFLOP_FR.md  CROSS_PLATFORM_MIGRATION.md  DCFR_IMPLEMENTATION.md  DEADLOCK_DIAGRAM.txt  (+297 more)
abstraction/: README.md  build_flop.py  build_river.py  build_turn.py  infoset_encoding.py
configs/: 6max_training - copie.txt  6max_training.yaml  blueprint_training.yaml  blueprint_training_5h.yaml  blueprint_training_5h_parallel.yaml  blueprint_training_5h_parallel_copie.yaml  cfv_net_m2.yaml  cfv_net_server.yaml  chunked_training.yaml  default.yaml  epsilon_schedule_example.yaml  smoke_test_30m.yaml  vision_metrics_config.yaml  vision_performance.yaml
docs/: ENHANCED_RT_EVAL_GUIDE.md  RT_VS_BLUEPRINT_EVALUATION.md  RT_VS_BLUEPRINT_EVALUATION_FR.md
eval_runs/: EVAL_RESULTS_2025-11-15_10-52-46_a6613c32.json
examples/: aivat_example.py  analyze_vision_timing.py  chunked_training_example.py  demo_chat_event_fusion.py  demo_chat_ocr_features.py  enhanced_rt_eval_examples.py  example_pack_buckets.py  kl_regularization_examples.py  multi_instance_demo.py  parallel_training_demo.py  public_card_sampling_demo.py  time_budget_training.py  vision_metrics_example.py
experiments/: README.md  compare_public_card_sampling.py
migrations/: README.md  checkpoint_migration.py
scripts/: README.md  compare_buckets_eval.py  compare_buckets_training.py
tests/: test_6max_critical.py  test_6max_integration.py  test_abstraction_experiments.py  test_abstraction_migration.py  test_action_abstraction.py  test_action_detection.py  test_action_translator.py  test_adaptive_epsilon.py  test_adaptive_epsilon_integration.py  test_aivat.py  test_aivat_integration.py  test_amount_cache_integration.py  test_apply_fused_events.py  test_array_utils.py  test_auto_capture.py  test_backmapping.py  test_basic_integration.py  test_blueprint_cli.py  test_board_color_filter.py  test_board_detection_chat.py  test_board_state.py  test_bucket_validation.py  test_bucketing.py  test_button_detector.py  test_button_inference.py  test_button_inference_integration.py  test_button_integration.py  test_button_label_filtering.py  test_card_vision_stability.py  test_cfv_dataset.py  test_cfv_features.py  test_cfv_infer_gating.py  test_cfv_net_cli_args.py  test_chat_card_fix_sc.py  test_chat_ocr_focus_mode.py  test_chat_ocr_quality_improvements.py  test_chat_parsing.py  test_chat_preprocessing_normalization.py  test_checkpoint_epsilon.py  test_checkpoint_improvements.py  (+123 more)
tools/: README.md  README_eval_6max.md  __init__.py  collect_cfv_data.py  eval_6max.py  eval_cfv_net.py  eval_h2h.py  eval_rt_vs_blueprint.py  eval_rt_vs_blueprint_enhanced.py  (+3 more)
(+133 files in other folders)
