[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-mccfr"
version = "0.1.0"
description = "Texas Hold'em MCCFR + Real-time Search (Pluribus-style)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Poker AI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "eval7>=0.1.8",
    "opencv-python>=4.8.0",
    "mss>=9.0.1",
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.10",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "scikit-learn>=1.3.0",
    "rich>=13.5.0",
    "tensorboard>=2.14.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/montana2ab/poker"
Repository = "https://github.com/montana2ab/poker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
